sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: ')' expected but ';' found.
                     if(!plusPetit(i,i+1)){echange(i;i+1)}
                                                    ^AlgBubbleSort1:3: error: ';' expected but ')' found.
                     if(!plusPetit(i,i+1)){echange(i;i+1)}
                                                        ^